--- a/roles/join_domain/tasks/join.yml
+++ b/roles/join_domain/tasks/join.yml
@@ -3,12 +3,11 @@
 
 # The timeout portion below is optional and defaults to 30
 
-- name: Modify /etc/resolv.conf
+- name: Modify /etc/resolv.conf to point to DC
   template: src=resolv.conf.j2 dest=/etc/resolv.conf
 
 - name: Join CentOS 7 machine(s) to AD domain
   expect:
-    timeout: 150
     command: realm join -U "{{ domain_admin }}"@"{{ domain }}" "{{ domain }}" 
     responses:
       (.*)@(.*): "{{ domain_admin_pw }}"
